# libmpv-darwin-build

./: Makefile  flake.nix  packages.lock.nix
.github/workflows/: ci.yaml
cross-files/: ios-arm64.ini  iossimulator-amd64.ini  iossimulator-arm64.ini  macos-amd64.ini  macos-arm64.ini
nix/overlays/: xcode.nix
nix/utils/default/: flavors.nix  variants.nix
patches/: libsrt-remove-brew-dep.patch  mpv-auto-deinterlacing.patch  mpv-fix-clipboard-swift.patch  mpv-fix-swift.patch
scripts/ffmpeg/: meson.build
scripts/frameworks/ios/: build-ios.sh
scripts/frameworks/macos/: build-macos.sh
scripts/libsrt/: build.sh  meson.build
